overlaping issue updated

--- a/src/app/pages/Home/hd-banner-new/hd-banner-new.component.scss
+++ b/src/app/pages/Home/hd-banner-new/hd-banner-new.component.scss
@@ -580,6 +580,9 @@
 }
 
 @media only screen and (max-width : 767px) {
+    .hidemobile {
+        display: none;
+    }
     .banner-area {
         .sliderCover {
             .item .container {
